@@ -276,6 +276,7 @@ All (GUI):
   Also made it easier to derive from wxWizard and override behaviour.
 - Made wxSizer::Fit() set the client size of the target window
 - Add support for wxDatePickerCtrl in wxGenericValidator (Herry Ayen Yang)
+- Added wxWindow::HasFocus().
 
 wxGTK:
 
